prevent tagline wrap

--- a/style.css
+++ b/style.css
@@ -212,11 +212,17 @@ body {
 	position: relative;
 	text-align: center;
 	top: 76px;
+	white-space: nowrap;
 }
 .hmid span {
 	color: #538b1d;
 	position: relative;
 	top: -1px;
+}
+@media screen and (max-width: 456px) {
+	.hmid {
+		white-space: normal;
+	}
 }
 #nav {
 	float: left;
